--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "PR Review Apps on fly.io"
+name: "Deploy & Destroy PR Review Apps on fly.io"
 description: "Deploy temporary apps from pull requests on Fly.io"
 author: Fly
 branding:
