--- a/action.yml
+++ b/action.yml
@@ -5,8 +5,8 @@ branding:
   icon: "upload-cloud"
   color: "purple"
 runs:
-  using: "docker"
-  image: "Dockerfile"
+  using: "node16"
+  main: "index.js"
 inputs:
   name:
     description: Fly app name
@@ -26,10 +26,4 @@ inputs:
     description: Whether new commits to the PR should re-deploy the Fly app
     default: true
   secrets:
-    description: Secrets to be set on the app. Separate multiple secrets with a space
-  vm:
-    description: Set app VM to a named size, eg. shared-cpu-1x, dedicated-cpu-1x, dedicated-cpu-2x etc. (defaults to shared-cpu-1x)
-  memory:
-    description: Set app VM memory (defaults to 256 megabytes)
-  count:
-    description: Set app VM count to the given value (defaults to 1)
+    description: Secrets to be set on the app. Separate multiple secrets with a space.
